--- a/deglacial-circulation.tex
+++ b/deglacial-circulation.tex
@@ -1,9 +1,12 @@
 \documentclass[a4paper]{article}
 
+\newcommand{\delO}[1]{\ensuremath{\mathrm{\delta ^{18}O_{#1}}}} % delta-18-O symbol
+
 \begin{document}
 
 \title{Examining deglacial circulation in the North Atlantic}
 \author{Chad Stainbank}
 \maketitle
 
+\input{tex/exercise1.tex}
 \end{document}
