--- a/deglacial-circulation.tex
+++ b/deglacial-circulation.tex
@@ -1,4 +1,5 @@
 \documentclass[a4paper]{article}
+\usepackage{graphicx}
 
 \newcommand{\delO}[1]{\ensuremath{\mathrm{\delta ^{18}O_{#1}}}} % delta-18-O symbol
 
