--- a/exercise1.ipynb
+++ b/exercise1.ipynb
@@ -85,7 +85,7 @@
     "### Reject measurements\n",
     "According to Barker et al (2003),  Mg/Ca measurements are determined to be \"potentially significantly contaminated\" by clay silicates (which can be high in Mg) if the Fe/Mg ratio exceeds 0.1, so measurements here *could* be rejected on the criteria:\n",
     "$$\n",
-    "\\frac{Fe/Mg}{Mg/Ca} > 0.1 \\, \\mathrm{mol \\cdot mol^{-1}}\n",
+    "\\frac{Fe/Ca}{Mg/Ca} > 0.1 \\, \\mathrm{mol \\cdot mol^{-1}}\n",
     "$$\n",
     "\n",
     "However, rather apply this criteria naively, it is useful to visually assess the magnitude of possible contamination criteria first."
