--- a/tex/exercise1.tex
+++ b/tex/exercise1.tex
@@ -14,10 +14,8 @@
         \label{fig:timeseriestempd18Osw}
 \end{figure}
 
-According to \citeauthor{barker2003study}\parencite{barker2003study}, Mg/Ca measurements are determined to be "potentially significantly contaminated" by clay silicates (which can be high in Mg) if the Fe/Mg ratio exceeds 0.1, so measurements here *could* be rejected on the criteria:
-$$
-\frac{Fe/Mg}{Mg/Ca} > 0.1 \, \mathrm{mol \cdot mol^{-1}}
-$$
-
-However, rather apply this criteria naively, it is useful to visually assess the magnitude of possible contamination criteria first.
-Of the 8 measurements meeting the criteria are rejected (red circles in Figures \ref{fig:Mg_Fe}, \ref{fig:timeseriestempd18Osw}.
+According to \citeauthor{barker2003study}\parencite{barker2003study}, a foramineferal molar ratio of Fe to Mg greater than approximately 0.1 is indicative of potential contamination by clay silicates. Measurements could therefore be rejected by simply applying the criteria:
+\begin{equation} \label{eq:fe_mg}
+    \frac{\mathrm{Fe}/\mathrm{Ca}}{\mathrm{Mg}/\mathrm{Ca}} > 0.1 \, \mathrm{mol \cdot mol^{-1}}
+\end{equation}
+However, visual assessment of the magnitude of potential contamination (Figure \ref{fig:Mg_Fe}) shows that, of the 8 measurements meeting the criteria for potential rejection, only one has a Fe/Mg ratio significantly far from the rest of the data. As a result, the 16.39 ka measurement is rejected for contamination. 
