Describe trends in Question 2

--- a/deglacial-circulation.tex
+++ b/deglacial-circulation.tex
@@ -2,9 +2,12 @@
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage[backend=biber, style=nature]{biblatex}
+\usepackage{gensymb}
+\usepackage{textcomp}
 \addbibresource{references.bib}
 
 \newcommand{\delO}[1]{\ensuremath{\mathrm{\delta ^{18}O_{#1}}}} % delta-18-O symbol
+\newcommand{\textapprox}{\raisebox{0.5ex}{\texttildelow}}
 
 \begin{document}
 
