--- a/references.bib
+++ b/references.bib
@@ -8,4 +8,15 @@
   publisher={Wiley Online Library}
 }
 
+@article{thornalley2011reconstructing,
+  title={Reconstructing North Atlantic deglacial surface hydrography and its link to the Atlantic overturning circulation},
+  author={Thornalley, David JR and Elderfield, Harry and McCave, I Nick},
+  journal={Global and Planetary Change},
+  volume={79},
+  number={3},
+  pages={163--175},
+  year={2011},
+  publisher={Elsevier}
+}
+
 
