--- a/tex/exercise1.tex
+++ b/tex/exercise1.tex
@@ -1,6 +1,7 @@
 \section{Exercise 1 - Mid-depth temperature and \delO{SW} reconstruction}
 
 \subsection{Question 1}
+\label{sec:Q1}
 According to \citeauthor{barker2003study} \parencite{barker2003study}, foraminiferal Fe/Mg molar ratios greater than approximately 0.1 are indicative of potential contamination by Mg-rich clay silicates.
 Mg/Ca measurements could therefore be rejected if they do not meet the criteria:
 
@@ -20,10 +21,15 @@ As a result, only the 16.39 ka measurement labelled in Figure \ref{fig:Mg_Fe} is
 \end{figure}
 
 \subsection{Question 2}
+As shown in Figure \ref{eq:timeseries}, the bottom water oxygen isotope excursion \delO{SW} declines to negative values after the Last Glacial Maximum (LGM) in correspondance with falling bottom water temperatures.
+The two trends fall sharply toward the beginning of Heinrich Stadial 1 (HS1) before diverging: in contrast to the gradual temperature recovery from nearly 0 \degree{}C, \delO{SW} continues to strongly decrease until the transition into the Bølling–Allerød warm period (BA, 14.7–12.9 ka \parencite{thornalley2011reconstructing}), at which point both lines rise together rapidly.
+The Younger Dryas (YD) marks a very abrupt return to HS1 temperatures, although the concurrent drop in \delO{SW} is not as severe, whereas each record shows relative stability over the course of the Holocene.
 
-\begin{figure}
+
+\begin{figure} \label{eq:timeseries}
 \includegraphics[width=\textwidth]{img/timeseries_temp_and_d18Osw.pdf}
-    \caption{The ice-volume corrected oxygen isotope excursion (\delO{SW}) (top) and bottom water temperature determined from Mg/Ca palaeothermetry (bottom) recorded in RAPid-10-1P.
-             Red points signify rejected measurements (see text), dashed vertical lines mark approximate boundaries of Heinrich Stadial 1.}
+    \caption{Trends in the ice-volume corrected \delO{SW} (top) and bottom water temperature since the Last Glacial Maximum determined from Mg/Ca palaeothermetry (bottom) recorded in RAPid-10-1P.
+             Red points and the gap in the timeseries signify a rejected measurement (see text in Section \ref{sec:Q1}).
+             Shaded regions mark Heinrich Stadial 1 (HS1) and Younger Dryas (YD), as defined in \citeauthor{thornalley2011reconstructing} \parencite{thornalley2011reconstructing}}.
         \label{fig:timeseriestempd18Osw}
 \end{figure}
