Describe controls on d18Osw

--- a/references.bib
+++ b/references.bib
@@ -19,4 +19,49 @@
   publisher={Elsevier}
 }
 
+@article{mathien2009salinity,
+  title={Salinity bias on the foraminifera Mg/Ca thermometry: Correction procedure and implications for past ocean hydrographic reconstructions},
+  author={Mathien-Blard, Elise and Bassinot, Franck},
+  journal={Geochemistry, Geophysics, Geosystems},
+  volume={10},
+  number={12},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+
+@article{bell2014local,
+  title={Local and regional trends in Plio-Pleistocene $\delta$18O records from benthic foraminifera},
+  author={Bell, David B and Jung, Simon JA and Kroon, Dick and Lourens, Lucas J and Hodell, David A},
+  journal={Geochemistry, Geophysics, Geosystems},
+  volume={15},
+  number={8},
+  pages={3304--3321},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@article{lynch2014tracers,
+  title={Tracers of past ocean circulation},
+  author={Lynch-Stieglitz, J and Marchitto, TM},
+  journal={Treatise on geochemistry},
+  volume={6},
+  pages={433--451},
+  year={2014}
+}
+
+@incollection{ravelo2007use,
+  title={The use of oxygen and carbon isotopes of foraminifera in Paleoceanography},
+  author={Ravelo, Ana Christina and Hillaire-Marcel, Claude},
+  editor={Claude Hillaire--Marcel and Anne De Vernal},
+  booktitle = {Proxies in Late Cenozoic Paleoceanography},
+  series = {Developments in Marine Geology},
+  journal={Developments in Marine Geology},
+  volume={1},
+  pages={735--764},
+  year={2007},
+  publisher={Elsevier}
+}
+
+
+
 
