--- a/tex/exercise1.tex
+++ b/tex/exercise1.tex
@@ -25,6 +25,10 @@ As shown in Figure \ref{eq:timeseries}, the bottom water oxygen isotope excursio
 The two trends fall sharply toward the beginning of Heinrich Stadial 1 (HS1) before diverging: in contrast to the gradual temperature recovery from nearly 0 \degree{}C, \delO{SW} continues to strongly decrease until the transition into the Bølling–Allerød warm period (BA, 14.7–12.9 ka \parencite{thornalley2011reconstructing}), at which point both lines rise together rapidly.
 The Younger Dryas (YD) marks a very abrupt return to HS1 temperatures, although the concurrent drop in \delO{SW} is not as severe, whereas each record shows relative stability over the course of the Holocene.
 
+The imprint of local salinity on foramineferal Mg/Ca may result in significant systematic positive bias in reconstructed \delO{SW} \parencite{mathien2009salinity}, whereas uncertainties in foramineferal \delO{carbonate} stemming from nonclimatic factors, such as measurement imprecision or variations in seawater carbonate ion concentration, are comparatively small \parencite{bell2014local}. 
+Assuming these issues are negligeable, the dominant control of surface water oxygen isotopic composition by the precipitation/evaporation/freshwater input balance --- i.e. salinity --- make \delO{SW} an effective indicator of the source of the ocean water mass \parencite{ravelo2007use, lynch2014tracers}. 
+
+% Do the abrupt drops in delO{SW} and temperature preceeding HS1 confirm input of meltwater from a Heinrich event?
 
 \begin{figure} \label{eq:timeseries}
 \includegraphics[width=\textwidth]{img/timeseries_temp_and_d18Osw.pdf}
