Replace bottom water references to mid-depth

--- a/tex/exercise1.tex
+++ b/tex/exercise1.tex
@@ -21,7 +21,7 @@ As a result, only the 16.39 ka measurement labelled in Figure \ref{fig:Mg_Fe} is
 \end{figure}
 
 \subsection{Question 2}
-As shown in Figure \ref{eq:timeseries}, the bottom water oxygen isotope excursion \delO{SW} declines to negative values after the Last Glacial Maximum (LGM) in correspondance with falling bottom water temperatures.
+As shown in Figure \ref{eq:timeseries}, the mid-depth seawater oxygen isotope excursion \delO{SW} declines to negative values after the Last Glacial Maximum (LGM) in correspondance with falling water temperatures.
 The two trends fall sharply toward the beginning of Heinrich Stadial 1 (HS1) before diverging: in contrast to the gradual temperature recovery from nearly 0 \degree{}C, \delO{SW} continues to strongly decrease until the transition into the Bølling–Allerød warm period (BA, 14.7–12.9 ka \parencite{thornalley2011reconstructing}), at which point both lines rise together rapidly.
 The Younger Dryas (YD) marks a very abrupt return to HS1 temperatures, although the concurrent drop in \delO{SW} is not as severe, whereas each record shows relative stability over the course of the Holocene.
 
@@ -32,7 +32,7 @@ Assuming these issues are negligeable, the dominant control of surface water oxy
 
 \begin{figure} \label{eq:timeseries}
 \includegraphics[width=\textwidth]{img/timeseries_temp_and_d18Osw.pdf}
-    \caption{Trends in the ice-volume corrected \delO{SW} (top) and bottom water temperature since the Last Glacial Maximum determined from Mg/Ca palaeothermetry (bottom) recorded in RAPid-10-1P.
+    \caption{Trends in the ice-volume corrected \delO{SW} (top) and mid-depth water temperature since the Last Glacial Maximum determined from Mg/Ca palaeothermetry (bottom) recorded in RAPid-10-1P.
              Red points and the gap in the timeseries signify a rejected measurement (see text in Section \ref{sec:Q1}).
              Shaded regions mark Heinrich Stadial 1 (HS1) and Younger Dryas (YD), as defined in \citeauthor{thornalley2011reconstructing} \parencite{thornalley2011reconstructing}}.
         \label{fig:timeseriestempd18Osw}
