Describe d18Osw controls with more nuance

--- a/tex/exercise1.tex
+++ b/tex/exercise1.tex
@@ -14,7 +14,7 @@ As a result, only the 16.39 ka measurement labelled in Figure \ref{fig:Mg_Fe} is
 
 \begin{figure}[h]
 \includegraphics[width=\textwidth]{img/scatter_MgCa_x_FeCa_contaminated.pdf}
-    \caption{Ratio of Mg/Ca to Fe/Ca in benthic foraminifera \emph{M. barleeanuum} in RAPiD-10-1P sediment core.
+    \caption{Ratio of Mg/Ca to Fe/Ca in benthic foraminifera \emph{M. barleeanuum} in RAPiD-10-1P sediment core on the South Iceland Rise.
              Dashed line seperates potentially contaminated measurements (red points) according to Equation \ref{eq:fe_mg}.
              Labelled point is identified for rejection.}
         \label{fig:Mg_Fe}
@@ -26,9 +26,16 @@ The two trends fall sharply toward the beginning of Heinrich Stadial 1 (HS1) bef
 The Younger Dryas (YD) marks a very abrupt return to HS1 temperatures, although the concurrent drop in \delO{SW} is not as severe, whereas each record shows relative stability over the course of the Holocene.
 
 The imprint of local salinity on foramineferal Mg/Ca may result in significant systematic positive bias in reconstructed \delO{SW} \parencite{mathien2009salinity}, whereas uncertainties in foramineferal \delO{carbonate} stemming from nonclimatic factors, such as measurement imprecision or variations in seawater carbonate ion concentration, are comparatively small \parencite{bell2014local}. 
-Assuming these issues are negligeable, the dominant control of surface water oxygen isotopic composition by the precipitation/evaporation/freshwater input balance --- i.e. salinity --- make \delO{SW} an effective indicator of the source of the ocean water mass \parencite{ravelo2007use, lynch2014tracers}. 
+Assuming these issues are negligeable, the control of seawater oxygen isotopic composition by the balance of precipitation, evaporation and freshwater input (i.e. salinity) make it an effective proxy for the influence of these characteristics at a water mass's surface origin \parencite{ravelo2007use, lynch2014tracers}.
+Given the subpolar location of the RAPiD-10-1P core, salinity is determined primarily by brine formation and glacial meltwater input.
+Since these both increase \delO{SW}, their effects can be distinguished using the temperature record. 
 
-% Do the abrupt drops in delO{SW} and temperature preceeding HS1 confirm input of meltwater from a Heinrich event?
+% In accordance with \parencite{thornalley2011reconstructing}, the drop in \delO{SW} over HS1 can be interpreted to reflect an increase in local brine formation,  
+
+
+% Thorn says it shows GNAIW 
+
+% The abrupt drops in delO{SW} and temperature preceeding HS1 are characteristic of sudden input of meltwater (i.e. Heinrich event), supporting triggering... \parenicite{}
 
 \begin{figure} \label{eq:timeseries}
 \includegraphics[width=\textwidth]{img/timeseries_temp_and_d18Osw.pdf}
