--- a/tex/exercise1.tex
+++ b/tex/exercise1.tex
@@ -26,11 +26,11 @@ The two trends fall sharply toward the beginning of Heinrich Stadial 1 (HS1) bef
 The Younger Dryas (YD) marks a very abrupt return to HS1 temperatures, although the concurrent drop in \delO{SW} is not as severe, whereas each record shows relative stability over the course of the Holocene.
 
 The imprint of local salinity on foramineferal Mg/Ca may result in significant systematic positive bias in reconstructed \delO{SW} \parencite{mathien2009salinity}, whereas uncertainties in foramineferal \delO{carbonate} stemming from nonclimatic factors, such as measurement imprecision or variations in seawater carbonate ion concentration, are comparatively small \parencite{bell2014local}. 
-Assuming these issues are negligeable, the control of seawater oxygen isotopic composition by the balance of precipitation, evaporation and freshwater input (i.e. salinity) make it an effective proxy for the influence of these characteristics at a water mass's surface origin \parencite{ravelo2007use, lynch2014tracers}.
+Assuming these issues are negligeable, the control of water oxygen isotopic composition by the balance of precipitation, evaporation and freshwater input at the surface makes it useful as a salinity proxy, allowing a deeper water mass's surface origin to be inferred \parencite{ravelo2007use, lynch2014tracers}.
 Given the subpolar location of the RAPiD-10-1P core, salinity is determined primarily by brine formation and glacial meltwater input.
-Since these both increase \delO{SW}, their effects can be distinguished using the temperature record. 
+Since these both increase \delO{SW}, their effects can be distinguished using the temperature record.
 
-% In accordance with \parencite{thornalley2011reconstructing}, the drop in \delO{SW} over HS1 can be interpreted to reflect an increase in local brine formation,  
+In accordance with \parencite{thornalley2011reconstructing}, the drop in \delO{SW} over HS1 can be interpreted as an increase in local brine formation  
 
 
 % Thorn says it shows GNAIW 
