Discuss reasons for changes

--- a/references.bib
+++ b/references.bib
@@ -62,6 +62,14 @@
   publisher={Elsevier}
 }
 
-
+@article{thornalley2010intermediate,
+  title={Intermediate and deep water paleoceanography of the northern North Atlantic over the past 21,000 years},
+  author={Thornalley, David JR and Elderfield, Harry and McCave, I Nick},
+  journal={Paleoceanography},
+  volume={25},
+  number={1},
+  year={2010},
+  publisher={Wiley Online Library}
+}
 
 
