--- a/tex/exercise1.tex
+++ b/tex/exercise1.tex
@@ -14,7 +14,7 @@ As a result, only the 16.39 ka measurement labelled in Figure \ref{fig:Mg_Fe} is
 
 \begin{figure}[h]
 \includegraphics[width=\textwidth]{img/scatter_MgCa_x_FeCa_contaminated.pdf}
-    \caption{Ratio of Mg/Ca to Fe/Ca in benthic foraminifera \emph{M. barleeanuum} in RAPiD-10-1P sediment core on the South Iceland Rise.
+    \caption{Ratio of Mg/Ca to Fe/Ca in benthic foraminifera \emph{M. barleeanuum} in intermediate sediment core RAPiD-10-1P, on the South Iceland Rise.
              Dashed line seperates potentially contaminated measurements (red points) according to Equation \ref{eq:fe_mg}.
              Labelled point is identified for rejection.}
         \label{fig:Mg_Fe}
@@ -26,12 +26,11 @@ The two trends fall sharply toward the beginning of Heinrich Stadial 1 (HS1) bef
 The Younger Dryas (YD) marks a very abrupt return to HS1 temperatures, although the concurrent drop in \delO{SW} is not as severe, whereas each record shows relative stability over the course of the Holocene.
 
 The imprint of local salinity on foramineferal Mg/Ca may result in significant systematic positive bias in reconstructed \delO{SW} \parencite{mathien2009salinity}, whereas uncertainties in foramineferal \delO{carbonate} stemming from nonclimatic factors, such as measurement imprecision or variations in seawater carbonate ion concentration, are comparatively small \parencite{bell2014local}. 
-Assuming these issues are negligeable, the control of water oxygen isotopic composition by the balance of precipitation, evaporation and freshwater input at the surface makes it useful as a salinity proxy, allowing a deeper water mass's surface origin to be inferred \parencite{ravelo2007use, lynch2014tracers}.
-Given the subpolar location of the RAPiD-10-1P core, salinity is determined primarily by brine formation and glacial meltwater input.
-Since these both increase \delO{SW}, their effects can be distinguished using the temperature record.
-
-In accordance with \parencite{thornalley2011reconstructing}, the drop in \delO{SW} over HS1 can be interpreted as an increase in local brine formation  
-
+Assuming these issues are negligeable, the control of water oxygen isotopic composition hydrological fractionation processes at the surface make it useful as a salinity proxy, allowing an interior ocean water mass's surface origin to be inferred \parencite{ravelo2007use, lynch2014tracers}.
+Although sea ice formation is the primary control on intermediate water salinity, given the subpolar location of the RAPiD-10-1P core, the relatively small isotopic effect of brine rejection means that the surface water source \delO{SW} signal is largely conserved \parenicte{thornalley2010intermediate}. 
+In accordance with previous studies \parencite{thornalley2010intermediate, thornalley2011reconstructing}, the drop in \delO{SW} over HS1 could therefore be interpreted to reflect the displacement of cold, hypersaline, 18O-enriched high-latitude deep water by an increasing sink of isotopically lighter surface waters of primarily glacial origin by enhancement of local brine formation.
+% Futhermore, the abrupt drops in \delO{SW} and temperature preceeding HS1 indicate the sudden influx of glacial meltwater. 
+These results support the theorised stratification, \ldots
 
 % Thorn says it shows GNAIW 
 
