--- a/references.bib
+++ b/references.bib
@@ -72,4 +72,38 @@
   publisher={Wiley Online Library}
 }
 
+@article{waelbroeck2011timing,
+  title={The timing of deglacial circulation changes in the Atlantic},
+  author={Waelbroeck, C and Skinner, LC and Labeyrie, L and Duplessy, J-C and Michel, E and Vazquez Riveiros, Natalia and Gherardi, J-M and Dewilde, F},
+  journal={Paleoceanography},
+  volume={26},
+  number={3},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{dokken1999rapid,
+  title={Rapid changes in the mechanism of ocean convection during the last glacial period},
+  author={Dokken, Trond M and Jansen, Eystein},
+  journal={Nature},
+  volume={401},
+  number={6752},
+  pages={458--461},
+  year={1999},
+  publisher={Nature Publishing Group}
+}
+
+@article{vidal1998benthic,
+  title={Benthic $\delta$18O records in the North Atlantic over the last glacial period (60--10 kyr): evidence for brine formation},
+  author={Vidal, L and Labeyrie, L and Weering, TCE van},
+  journal={Paleoceanography},
+  volume={13},
+  number={3},
+  pages={245--251},
+  year={1998},
+  publisher={Wiley Online Library}
+}
+
+
+
 
