--- a/tex/exercise1.tex
+++ b/tex/exercise1.tex
@@ -26,15 +26,10 @@ The two trends fall sharply toward the beginning of Heinrich Stadial 1 (HS1) bef
 The Younger Dryas (YD) marks a very abrupt return to HS1 temperatures, although the concurrent drop in \delO{SW} is not as severe, whereas each record shows relative stability over the course of the Holocene.
 
 The imprint of local salinity on foramineferal Mg/Ca may result in significant systematic positive bias in reconstructed \delO{SW} \parencite{mathien2009salinity}, whereas uncertainties in foramineferal \delO{carbonate} stemming from nonclimatic factors, such as measurement imprecision or variations in seawater carbonate ion concentration, are comparatively small \parencite{bell2014local}. 
-Assuming these issues are negligeable, the control of water oxygen isotopic composition hydrological fractionation processes at the surface make it useful as a salinity proxy, allowing an interior ocean water mass's surface origin to be inferred \parencite{ravelo2007use, lynch2014tracers}.
-Although sea ice formation is the primary control on intermediate water salinity, given the subpolar location of the RAPiD-10-1P core, the relatively small isotopic effect of brine rejection means that the surface water source \delO{SW} signal is largely conserved \parenicte{thornalley2010intermediate}. 
-In accordance with previous studies \parencite{thornalley2010intermediate, thornalley2011reconstructing}, the drop in \delO{SW} over HS1 could therefore be interpreted to reflect the displacement of cold, hypersaline, 18O-enriched high-latitude deep water by an increasing sink of isotopically lighter surface waters of primarily glacial origin by enhancement of local brine formation.
-% Futhermore, the abrupt drops in \delO{SW} and temperature preceeding HS1 indicate the sudden influx of glacial meltwater. 
-These results support the theorised stratification, \ldots
-
-% Thorn says it shows GNAIW 
-
-% The abrupt drops in delO{SW} and temperature preceeding HS1 are characteristic of sudden input of meltwater (i.e. Heinrich event), supporting triggering... \parenicite{}
+Assuming these issues are negligeable, the control of water oxygen isotopic composition hydrological fractionation processes at the surface make it useful proxy for salinity, from which an interior ocean water mass's surface origin can be inferred \parencite{ravelo2007use, lynch2014tracers}.
+Although sea ice formation may be an important control on intermediate water salinity, given the subpolar location of the RAPiD-10-1P core, the relatively small isotopic effect of brine rejection means that the surface source \delO{SW} signal is largely unaltered \parencite{waelbroeck2011timing}. 
+Therefore, in accordance with similiar studies \parencite[e.g.][]{thornalley2010intermediate, thornalley2011reconstructing}, the changes in \delO{SW} and Temperature over HS1 (Figure \ref{eq:timeseries}) could be interpreted to show the displacement of cold, hypersaline, \delO{}-enriched polar waters, originating from open-ocean convection, by an increasing sink of warmer, isotopically lighter glacial meltwater by enhancement of local brine formation, while the abrupt drops preceeding HS1 appear to record large-scale freshening events.
+These results support previous studies hypothesising the suppression of traditional North Atlantic Deep Water (NADW) during deglacial stadials by intense ocean stratification associated with the massive input of freshwater into the North Atlantic from the Northern Hemispheric ice sheets \parencite{vidal1998benthic, dokken1999rapid}.
 
 \begin{figure} \label{eq:timeseries}
 \includegraphics[width=\textwidth]{img/timeseries_temp_and_d18Osw.pdf}
