--- a/deglacial-circulation.tex
+++ b/deglacial-circulation.tex
@@ -13,6 +13,7 @@
 
 \title{Examining deglacial circulation in the North Atlantic}
 \author{Chad Stainbank}
+\date{}
 \maketitle
 
 \input{tex/exercise1.tex}
