Use candidate ID number as author

--- a/deglacial-circulation.tex
+++ b/deglacial-circulation.tex
@@ -12,7 +12,7 @@
 \begin{document}
 
 \title{Examining deglacial circulation in the North Atlantic}
-\author{Chad Stainbank}
+\author{SGHK8}
 \date{}
 \maketitle
 
