--- a/deglacial-circulation.tex
+++ b/deglacial-circulation.tex
@@ -4,12 +4,15 @@
 \usepackage[backend=biber, style=nature]{biblatex}
 \usepackage{gensymb}
 \usepackage{textcomp}
+\usepackage{pdfpages}
 \addbibresource{references.bib}
 
 \newcommand{\delO}[1]{\ensuremath{\mathrm{\delta ^{18}O_{#1}}}} % delta-18-O symbol
 \newcommand{\textapprox}{\raisebox{0.5ex}{\texttildelow}}
 
 \begin{document}
+
+\includepdf{coursework-submission-coversheet.pdf}
 
 \title{Examining deglacial circulation in the North Atlantic}
 \author{SGHK8}
