Answer Exercise 2 Question 2

--- a/references.bib
+++ b/references.bib
@@ -104,6 +104,30 @@
   publisher={Wiley Online Library}
 }
 
+@article{bard1994north,
+  title={The North Atlantic atmosphere-sea surface 14 C gradient during the Younger Dryas climatic event},
+  author={Bard, Edouard and Arnold, Maurice and Mangerud, Jan and Paterne, Martine and Labeyrie, Laurent and Duprat, Josette and M{\'e}li{\`e}res, Marie-Antoinette and S{\o}nstegaard, Eivind and Duplessy, Jean-Claude},
+  journal={Earth and Planetary Science Letters},
+  volume={126},
+  number={4},
+  pages={275--287},
+  year={1994},
+  publisher={Elsevier}
+}
+
+@article{hughen2004marine04,
+  title={Marine04 marine radiocarbon age calibration, 0--26 cal kyr BP},
+  author={Hughen, Konrad A and Baillie, Mike GL and Bard, Edouard and Beck, J Warren and Bertrand, Chanda JH and Blackwell, Paul G and Buck, Caitlin E and Burr, George S and Cutler, Kirsten B and Damon, Paul E and others},
+  journal={Radiocarbon},
+  volume={46},
+  number={03},
+  pages={1059--1086},
+  year={2004},
+  publisher={Cambridge Univ Press}
+}
+
+
+
 
 
 
