Finish Exercise 2 Question 3

--- a/deglacial-circulation.tex
+++ b/deglacial-circulation.tex
@@ -9,7 +9,7 @@
 
 \newcommand{\delO}[1]{\ensuremath{\mathrm{\delta ^{18}O_{#1}}}} % delta-18-O symbol
 \newcommand{\textapprox}{\raisebox{0.5ex}{\texttildelow}}
-
+\newcommand{\fC}{$^{14}\mathrm{C}$}
 \begin{document}
 
 \includepdf{coursework-submission-coversheet.pdf}
