--- a/references.bib
+++ b/references.bib
@@ -126,6 +126,41 @@
   publisher={Cambridge Univ Press}
 }
 
+@article{bard1994north,
+  title={The North Atlantic atmosphere-sea surface 14 C gradient during the Younger Dryas climatic event},
+  author={Bard, Edouard and Arnold, Maurice and Mangerud, Jan and Paterne, Martine and Labeyrie, Laurent and Duprat, Josette and M{\'e}li{\`e}res, Marie-Antoinette and S{\o}nstegaard, Eivind and Duplessy, Jean-Claude},
+  journal={Earth and Planetary Science Letters},
+  volume={126},
+  number={4},
+  pages={275--287},
+  year={1994},
+  publisher={Elsevier}
+}
+
+@article{boyle1985comparison,
+  title={Comparison of Atlantic and Pacific paleochemical records for the last 215,000 years: Changes in deep ocean circulation and chemical inventories},
+  author={Boyle, EA and Keigwin, LD},
+  journal={Earth and Planetary Science Letters},
+  volume={76},
+  number={1-2},
+  pages={135--150},
+  year={1985},
+  publisher={Elsevier}
+}
+
+@article{thornalley2011deglacial,
+  title={The deglacial evolution of North Atlantic deep convection},
+  author={Thornalley, David JR and Barker, Stephen and Broecker, Wallace S and Elderfield, Henry and McCave, I Nick},
+  journal={science},
+  volume={331},
+  number={6014},
+  pages={202--205},
+  year={2011},
+  publisher={American Association for the Advancement of Science}
+}
+
+
+
 
 
 
