Insert timeseries for Exercise 2 Questions 3 and 4

--- a/references.bib
+++ b/references.bib
@@ -159,10 +159,26 @@
   publisher={American Association for the Advancement of Science}
 }
 
+@article{mcmanus2004collapse,
+  title={Collapse and rapid resumption of Atlantic meridional circulation linked to deglacial climate changes},
+  author={McManus, Jerry F and Francois, Roger and Gherardi, J-M and Keigwin, Lloyd D and Brown-Leger, Susan},
+  journal={Nature},
+  volume={428},
+  number={6985},
+  pages={834--837},
+  year={2004},
+  publisher={Nature Publishing Group}
+}
 
-
-
-
-
+@article{roberts2010synchronous,
+  title={Synchronous deglacial overturning and water mass source changes},
+  author={Roberts, Natalie L and Piotrowski, Alexander M and McManus, Jerry F and Keigwin, Lloyd D},
+  journal={Science},
+  volume={327},
+  number={5961},
+  pages={75--78},
+  year={2010},
+  publisher={American Association for the Advancement of Science}
+}
 
 
