Define commands for various symbols

--- a/deglacial-circulation.tex
+++ b/deglacial-circulation.tex
@@ -8,8 +8,12 @@
 \addbibresource{references.bib}
 
 \newcommand{\delO}[1]{\ensuremath{\mathrm{\delta ^{18}O_{#1}}}} % delta-18-O symbol
-\newcommand{\textapprox}{\raisebox{0.5ex}{\texttildelow}}
-\newcommand{\fC}{$^{14}\mathrm{C}$}
+\newcommand{\textapprox}{\raisebox{0.5ex}{\texttildelow}} % centred tilde
+\newcommand{\fC}{$^{14}\mathrm{C}$} % carbon-14
+\newcommand{\BP}{$\mathrm{\Delta}^{14}\mathrm{C}_{\mathrm{B-P}}${}} % delta-14-C B-P
+\newcommand{\eNd}{$\mathrm{\epsilon}$Nd} % epsilon neodymium
+\newcommand{\PaTh}{$^{231}$Pa/$^{230}$Th} % Pa/Th
+
 \begin{document}
 
 \includepdf{coursework-submission-coversheet.pdf}
