--- a/tex/exercise2.tex
+++ b/tex/exercise2.tex
@@ -34,10 +34,15 @@ While changes in the latter appear to lag those in the former by approximately 0
             \label{fig:bp_path_end}
 \end{figure}
 The benthic--planktic foraminifera \fC{} offset (Figure \ref{fig:bp_path_end}, top) is considerably larger at LGM, HS1 and YD than during the BA and the Holocene.
-Since \BP{} of a water mass effectively records the ventilation age (i.e. time since last exposure at the surface) \parencite{lynch2014tracers}, these results indicate that the North Atlanticwas highly stratified during the cold periods, with younger northern sourced waters displaced in the deep ocean by the intrusion of more ancient waters of southern origin.
+Since \BP{} of a water mass effectively records the ventilation age (i.e. time since last exposure at the surface) \parencite{lynch2014tracers}, these results indicate that the North Atlantic was highly stratified during the cold periods, with younger northern sourced waters displaced in the deep ocean by the intrusion of more ancient waters of southern origin.
 This supports evidence for the slowdown or shutoff of NADW formation during these cold periods, allowing Antarctic Bottom Water to fill the global abyssal basins \parencite{boyle1985comparison, bard1994north, thornalley2011deglacial}.
 Likewise, the rapid rejuvenation of deep waters at the HS1--BA and YD--Holocene transitions shown in the \BP{} time series indicates rapid resumption of the contemporary (warm) mode ocean overturning circulation.
 
 \subsection{Question 4}
 \label{sec:Q2.4}
-The \BP{} 
+The \BP{} changes described in Section \ref{sec:Q2.3} are largely consistent with isotopic trends described in other studies, as depicted in Figure \ref{fig:bp_path_end}.
+The ratio of $^{231}$P sequestered in marine sediments to the more quickly scavenged $^{230}$Th is an indicator of the residence time of the overlying water mass \parencite{lynch2014tracers}, and the high values recorded on the Bermuda rise for the HS1, and to a lesser extent YD, indicate poor export of $^{231}$P from the region during the postglacial stadials.
+This can be explained by the arrest of the southward movement of NADW, as described above, with the steep \PaTh{} drop at \textapprox 15.5 marking the abrupt resumption of the AMOC following HS1 \parencite{mcmanus2004collapse}.
+However, one issue with this using the sedimentary \PaTh{} signal to infer changes in global circulation is that the distinction between a complete shutdown and a more moderate shift to a shallower, more locally confined circulation of North Atlantic waters is not always readily apparent, since it essentially records change in the entire column of water above \parencite{roberts2010synchronous}. 
+Since \eNd{} serves as a form of water mass signature, it can be used to supplement the interpretation of the other records in Figure \ref{fig:bp_path_end} \parencite{lynch2014tracers}. 
+The high values from the LGM through to the end of HS1 provide evidence for the incursion of AABW into the Northwest Atlantic, with a marked shift to less radiogenic Northern-sourced waters following the YD, supporting the theory of AMOC modulation as a distinctive feature of deglacial climate change \parencite{roberts2010synchronous}.
