--- a/references.bib
+++ b/references.bib
@@ -181,4 +181,24 @@
   publisher={American Association for the Advancement of Science}
 }
 
+@article{garcia2014rare,
+  title={Rare earth elements and Nd isotopes tracing water mass mixing and particle-seawater interactions in the SE Atlantic},
+  author={Garcia-Solsona, E and Jeandel, C and Labatut, M and Lacan, F and Vance, D and Chavagnac, V and Pradoux, C},
+  journal={Geochimica et Cosmochimica Acta},
+  volume={125},
+  pages={351--372},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{piepgras1987rare,
+  title={Rare earth element transport in the western North Atlantic inferred from Nd isotopic observations},
+  author={Piepgras, DJ and Wasserburg, GJ},
+  journal={Geochimica et Cosmochimica Acta},
+  volume={51},
+  number={5},
+  pages={1257--1271},
+  year={1987},
+  publisher={Elsevier}
+}
 
