--- a/tex/exercise1.tex
+++ b/tex/exercise1.tex
@@ -28,13 +28,13 @@ The Younger Dryas (YD) marks a very abrupt return to HS1 temperatures, although 
 The imprint of local salinity on foramineferal Mg/Ca may result in significant systematic positive bias in reconstructed \delO{SW} \parencite{mathien2009salinity}, whereas uncertainties in foramineferal \delO{carbonate} stemming from nonclimatic factors, such as measurement imprecision or variations in seawater carbonate ion concentration, are comparatively small \parencite{bell2014local}. 
 Assuming these issues are negligeable, the control of water oxygen isotopic composition hydrological fractionation processes at the surface make it useful proxy for salinity, from which an interior ocean water mass's surface origin can be inferred \parencite{ravelo2007use, lynch2014tracers}.
 Although sea ice formation may be an important control on intermediate water salinity, given the subpolar location of the RAPiD-10-1P core, the relatively small isotopic effect of brine rejection means that the surface source \delO{SW} signal is largely unaltered \parencite{waelbroeck2011timing}. 
-Therefore, in accordance with similiar studies \parencite[e.g.][]{thornalley2010intermediate, thornalley2011reconstructing}, the changes in \delO{SW} and Temperature over HS1 (Figure \ref{eq:timeseries}) could be interpreted to show the displacement of cold, hypersaline, \delO{}-enriched polar waters, originating from open-ocean convection, by an increasing sink of warmer, isotopically lighter glacial meltwater by enhancement of local brine formation, while the abrupt drops preceeding HS1 appear to record large-scale freshening events.
+Therefore, in accordance with similiar studies \parencite[e.g.][]{thornalley2010intermediate, thornalley2011reconstructing}, the changes in \delO{SW} and Temperature over HS1 (Figure \ref{eq:timeseries}) could be interpreted to show the displacement of cold, hypersaline, \delO{}-enriched polar waters, originating from open-ocean convection, by an increasing sink of warmer, isotopically lighter glacial meltwater due to enhancement of local brine formation, while the abrupt drops preceeding HS1 appear to record large-scale freshening events.
 These results support previous studies hypothesising the suppression of traditional North Atlantic Deep Water (NADW) during deglacial stadials by intense ocean stratification associated with the massive input of freshwater into the North Atlantic from the Northern Hemispheric ice sheets \parencite{vidal1998benthic, dokken1999rapid}.
 
 \begin{figure} \label{eq:timeseries}
 \includegraphics[width=\textwidth]{img/timeseries_temp_and_d18Osw.pdf}
     \caption{Trends in the ice-volume corrected \delO{SW} (top) and mid-depth water temperature since the Last Glacial Maximum determined from Mg/Ca palaeothermetry (bottom) recorded in RAPid-10-1P.
              Red points and the gap in the timeseries signify a rejected measurement (see text in Section \ref{sec:Q1}).
-             Shaded regions mark Heinrich Stadial 1 (HS1) and Younger Dryas (YD), as defined in \citeauthor{thornalley2011reconstructing} \parencite{thornalley2011reconstructing}}.
+             Shaded regions mark Heinrich Stadial 1 (HS1) and Younger Dryas (YD), as defined in \citeauthor{thornalley2011reconstructing} \parencite{thornalley2011reconstructing}.}
         \label{fig:timeseriestempd18Osw}
 \end{figure}
