Try, and fail, to force formatting

--- a/tex/exercise1.tex
+++ b/tex/exercise1.tex
@@ -12,7 +12,7 @@ Mg/Ca measurements could therefore be rejected if they do not meet the criteria:
 However, visual assessment of the magnitude of potential contamination (Figure \ref{fig:Mg_Fe}) shows that all but one of the eight measurements failing the this criteria are close to the rest of the data in terms of Fe/Mg.
 As a result, only the 16.39 ka measurement labelled in Figure \ref{fig:Mg_Fe} is rejected for contamination.
 
-\begin{figure}[h]
+\begin{figure}[h!]
 \includegraphics[width=\textwidth]{img/scatter_MgCa_x_FeCa_contaminated.pdf}
     \caption{Ratio of Mg/Ca to Fe/Ca in benthic foraminifera \emph{M. barleeanuum} in intermediate sediment core RAPiD-10-1P, on the South Iceland Rise.
              Dashed line seperates potentially contaminated measurements (red points) according to Equation \ref{eq:fe_mg}.
